--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.0.0",
+    "naive-ui": "^2.34.4",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.0.4",
+    "vfonts": "^0.0.3",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
