--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsdom": "^22.0.0",
     "naive-ui": "^2.34.4",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.63.3",
     "typescript": "~5.0.4",
     "vfonts": "^0.0.3",
     "vite": "^4.3.5",
