--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "antfu:lint": "eslint .",
+    "antfu:lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "pinia": "^2.0.36",
@@ -17,17 +19,16 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.39.5",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint": "^8.42.0",
     "jsdom": "^22.0.0",
     "naive-ui": "^2.34.4",
     "npm-run-all": "^4.1.5",
