--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm-run-all": "^4.1.5",
     "sass": "^1.63.3",
     "typescript": "~5.0.4",
+    "unocss": "^0.53.1",
     "vfonts": "^0.0.3",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
