chore: header style

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antfu:lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
